# extracting-from-excel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analyze_data.py  generate_sample.py  main.py  pyproject.toml  quickstart.sh  run_enhanced.py
docs/: PROJECT_SUMMARY.md  README.md
examples/: EXAMPLE_USAGE.md
output/: .gitkeep  EXTRACTION_README.md  QUICK_START_GUIDE.md
src/excel_to_ocr/: __init__.py  column_slicer.py  config.yaml  html_renderer.py  markdown_exporter.py  pdf_exporter.py  pipeline.py
templates/: table.html
